--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,56 +1,56 @@
 <resources>
-    <string name="app_name">Игра Жизни</string>
+    <string name="app_name">Игра в Жизнь</string>
 
-    <string name="GameOfLife">Игра Жизни</string>
+    <string name="GameOfLife">Игра в Жизнь</string>
     <string name="Settings">Настройки</string>
-    <string name="Onboarding">Регистрация</string>
-    <string name="drawer_GameOfLife_description">Игра жизни</string>
+    <string name="Onboarding">Введение</string>
+    <string name="drawer_GameOfLife_description">Игра в Жизнь</string>
     <string name="drawer_Settings_description">Настройки</string>
     <string name="drawer_Onboarding_description">Введение</string>
 
-    <string name="speed_value_100ms">100 мс</string>
-    <string name="speed_value_250ms">250 мс</string>
-    <string name="speed_value_500ms">500 мс</string>
-    <string name="speed_value_750ms">750 мс</string>
-    <string name="speed_value_1s">1 с</string>
+    <string name="speed_value_100ms">100мс</string>
+    <string name="speed_value_250ms">250мс</string>
+    <string name="speed_value_500ms">500мс</string>
+    <string name="speed_value_750ms">750мс</string>
+    <string name="speed_value_1s">1с</string>
 
     <string name="start_game">Начать игру</string>
     <string name="menu_button">Кнопка меню</string>
-    <string name="clear">Прозрачный</string>
-    <string name="free_soul_mode">Бесплатный режим души</string>
+    <string name="clear">Очистить</string>
+    <string name="free_soul_mode">Свободные души</string>
     <string name="free_soul_mode_description">Указывает, следует ли удалять мертвые клетки</string>
     <string name="emoji_mode">Режим эмодзи</string>
-    <string name="emoji_mode_description">Вместо заливки используется набор иконок эмодзи.</string>
+    <string name="emoji_mode_description">Вместо заливки используется набор эмодзи</string>
     <string name="restart">Перезапуск</string>
     <string name="stable_combination">Стабильное сочетание 🎉</string>
     <string name="no_one_survived">Никто не выжил 💀</string>
-    <string name="alive">Живой</string>
-    <string name="deaths">Летальные исходы</string>
-    <string name="revivals">возрождения</string>
-    <string name="switch_running_simulation">Переключить симуляцию бега</string>
+    <string name="alive">Живых</string>
+    <string name="deaths">Мертвых</string>
+    <string name="revivals">Возрождений</string>
+    <string name="switch_running_simulation">Переключить режим симуляцию</string>
     <string name="set_field_dimensions">Установить размеры поля</string>
     <string name="rows">Строки</string>
     <string name="columns">Столбцы</string>
     <string name="one_step_duration">Продолжительность одного шага</string>
-    <string name="simulation_settings">Настройки моделирования</string>
+    <string name="simulation_settings">Настройки симуляции</string>
     <string name="language">Язык</string>
     <string name="game_settings">Игровые настройки</string>
-    <string name="neighbors_for_reviving">Соседи по возрождению</string>
-    <string name="neighbors_for_surviving">Соседи для выживания</string>
+    <string name="neighbors_for_reviving">Соседей для возрождению</string>
+    <string name="neighbors_for_surviving">Соседей для выживания</string>
     <string name="rules">Правила</string>
     <string name="to_default">По умолчанию</string>
-    <string name="change_theme">Менять тему</string>
+    <string name="change_theme">Изменить тему</string>
     <string name="application">Приложение</string>
     <string name="information">Информация</string>
     <string name="rules_set">Набор правил</string>
-    <string name="rate_dialog_title">Вам понравилось это приложение\?</string>
-    <string name="rate_dialog_description">Пожалуйста, поделитесь своим мнением о приложении, оставив отзыв. Твой
-        рейтинг поможет нам улучшить наше приложение для всех пользователей</string>
-    <string name="dont_ask_again">Не спрашивай больше</string>
+    <string name="rate_dialog_title">Вам понравилось это приложение?</string>
+    <string name="rate_dialog_description">Пожалуйста, поделитесь своим мнением о приложении, оставив отзыв. Твоя
+        оценка поможет нам улучшить приложение для всех пользователей</string>
+    <string name="dont_ask_again">Не спрашивать больше</string>
     <string name="later">Позже</string>
-    <string name="rate">Ставка!</string>
-    <string name="custom_rules">Пользовательские правила</string>
-    <string name="rules_set_description">Выбирайте разные наборы правил, чтобы увидеть разные игровые сценарии.</string>
+    <string name="rate">Оценить!</string>
+    <string name="custom_rules">Свои правила</string>
+    <string name="rules_set_description">Выбирайте разные наборы правил, чтобы увидеть разные игровые сценарии</string>
     <string name="other">Другой</string>
 
     <string name="stable">стабильный</string>
@@ -60,16 +60,14 @@
 
     <string name="open_in_wikipedia">Открыть в Википедии</string>
     <string name="JohnHortonConway">Джон Хортон Конвей</string>
-    <string name="JohnHortonConway_card_description">английский математик, внес значительный вклад
-        вклад в конечные группы, теорию узлов, теорию чисел, комбинаторную теорию игр и теорию кодирования.
-        Примечательно, что он известен изобретением клеточного автомата под названием «Игра жизни» в развлекательной математике.</string>
+    <string name="JohnHortonConway_card_description">Английский математик, внес значительный вклад в конечные автоматы, теорию комбинаций, теорию чисел, теорию игр и теорию кодирования.
+        Примечательно, что он известен изобретением клеточного автомата под названием «Игра в жизнь» в развлекательной математике.</string>
 
-    <string name="the_game_of_life">Игра Жизни</string>
-    <string name="GameOfLife_large_description">Игра Жизни, также известная просто как «Жизнь», представляет собой клеточный автомат.
+    <string name="the_game_of_life">Игра в Жизнь</string>
+    <string name="GameOfLife_large_description">Также известная просто как «Жизнь», представляет собой клеточный автомат.
         разработана в 1970 году. Это игра с нулевым участием игроков, а это означает, что ее эволюция определяется ее начальным состоянием и
-        не требует дополнительных действий. Человек взаимодействует с Игрой Жизни, создавая первоначальную конфигурацию.
-        и наблюдаем за тем, как оно развивается. Он является полным по Тьюрингу и может моделировать универсальный конструктор или любой другой конструктор Тьюринга.
-        машина</string>
+        не требует дополнительных действий. Человек взаимодействует с Игрой в Жизнь, создавая первоначальную конфигурацию.
+        и наблюдаем за тем, как оно развивается. Он является полным по Тьюрингу и может моделировать универсальный конструктор или любой другой конструктор Тьюринга.</string>
 
     <string name="open_source_project">Проект с открытым исходным кодом</string>
     <string name="open_source_project_description">Вы можете найти весь исходный код на GitHub ⭐️</string>
@@ -79,11 +77,9 @@
         новые возможности. Предлагайте свои идеи, задавайте вопросы и получайте быстрые ответы</string>
 
     <string name="onb_1_headline">Доктор Джон Конвей</string>
-    <string name="onb_1_description">В 1970 году разработал эту симуляцию эволюции клеточных автоматов, названную «Игра».
-        Жизни», где каждая клетка игрового поля подчиняется простым правилам</string>
+    <string name="onb_1_description">В 1970 году разработал эту симуляцию эволюции клеточных автоматов, названную «Игра в Жизнь», где каждая клетка игрового поля подчиняется простым правилам</string>
     <string name="onb_2_headline">Правило 1</string>
-    <string name="onb_2_description">В пустой (мертвой) клетке, если живых соседей ровно три, жизнь
-        рожденный</string>
+    <string name="onb_2_description">В пустой (мертвой) клетке, если живых соседей ровно три, жизнь возрождается</string>
     <string name="onb_3_headline">Правило 2</string>
     <string name="onb_3_description">Если у живой клетки есть два или три живых соседа, она продолжает жить;
         в противном случае клетка погибает (из-за «одиночества» или «перенаселенности»)</string>
