--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,91 +1,88 @@
 <resources>
-    <string name="app_name">Гра життя</string>
+    <string name="app_name">Игра в Жизнь</string>
 
-    <string name="GameOfLife">Гра життя</string>
-    <string name="Settings">Налаштування</string>
-    <string name="Onboarding">Онбордінг</string>
-    <string name="drawer_GameOfLife_description">Гра життя</string>
-    <string name="drawer_Settings_description">Налаштування</string>
-    <string name="drawer_Onboarding_description">вступ</string>
+    <string name="GameOfLife">Игра в Жизнь</string>
+    <string name="Settings">Настройки</string>
+    <string name="Onboarding">Введение</string>
+    <string name="drawer_GameOfLife_description">Игра в Жизнь</string>
+    <string name="drawer_Settings_description">Настройки</string>
+    <string name="drawer_Onboarding_description">Введение</string>
 
-    <string name="speed_value_100ms">100 мс</string>
-    <string name="speed_value_250ms">250 мс</string>
-    <string name="speed_value_500ms">500 мс</string>
-    <string name="speed_value_750ms">750 мс</string>
+    <string name="speed_value_100ms">100мс</string>
+    <string name="speed_value_250ms">250мс</string>
+    <string name="speed_value_500ms">500мс</string>
+    <string name="speed_value_750ms">750мс</string>
     <string name="speed_value_1s">1с</string>
 
-    <string name="start_game">Почни гру</string>
+    <string name="start_game">Начать игру</string>
     <string name="menu_button">Кнопка меню</string>
-    <string name="clear">ясно</string>
-    <string name="free_soul_mode">Безкоштовний режим душі</string>
-    <string name="free_soul_mode_description">Вказує, чи слід очистити мертві клітини</string>
-    <string name="emoji_mode">Режим Emoji</string>
-    <string name="emoji_mode_description">Замість заливки використовується набір іконок емодзі</string>
-    <string name="restart">Перезапустіть</string>
-    <string name="stable_combination">Стійке поєднання🎉</string>
-    <string name="no_one_survived">Ніхто не вижив 💀</string>
-    <string name="alive">Живий</string>
-    <string name="deaths">Смерті</string>
-    <string name="revivals">Відродження</string>
-    <string name="switch_running_simulation">Симуляція бігу</string>
-    <string name="set_field_dimensions">Встановіть розміри поля</string>
-    <string name="rows">рядки</string>
-    <string name="columns">Стовпці</string>
-    <string name="one_step_duration">Тривалість одного кроку</string>
-    <string name="simulation_settings">Налаштування симуляції</string>
-    <string name="language">Мова</string>
-    <string name="game_settings">Налаштування гри</string>
-    <string name="neighbors_for_reviving">Сусіди за відродження</string>
-    <string name="neighbors_for_surviving">Сусіди на виживання</string>
-    <string name="rules">правила</string>
-    <string name="to_default">За замовчуванням</string>
-    <string name="change_theme">Змінити тему</string>
-    <string name="application">застосування</string>
-    <string name="information">Інформація</string>
-    <string name="rules_set">Набір правил</string>
-    <string name="rate_dialog_title">Вам сподобався цей додаток\?</string>
-    <string name="rate_dialog_description">Будь ласка, поділіться своєю думкою про додаток, залишивши відгук. ваш
-        рейтинг допоможе нам покращити нашу програму для всіх користувачів</string>
-    <string name="dont_ask_again">Більше не питай</string>
-    <string name="later">Пізніше</string>
-    <string name="rate">Оцініть!</string>
-    <string name="custom_rules">Спеціальні правила</string>
-    <string name="rules_set_description">Виберіть різні набори правил, щоб побачити різні ігрові сценарії</string>
-    <string name="other">Інший</string>
+    <string name="clear">Очистить</string>
+    <string name="free_soul_mode">Свободные души</string>
+    <string name="free_soul_mode_description">Указывает, следует ли удалять мертвые клетки</string>
+    <string name="emoji_mode">Режим эмодзи</string>
+    <string name="emoji_mode_description">Вместо заливки используется набор эмодзи</string>
+    <string name="restart">Перезапуск</string>
+    <string name="stable_combination">Стабильное сочетание 🎉</string>
+    <string name="no_one_survived">Никто не выжил 💀</string>
+    <string name="alive">Живых</string>
+    <string name="deaths">Мертвых</string>
+    <string name="revivals">Возрождений</string>
+    <string name="switch_running_simulation">Переключить режим симуляцию</string>
+    <string name="set_field_dimensions">Установить размеры поля</string>
+    <string name="rows">Строки</string>
+    <string name="columns">Столбцы</string>
+    <string name="one_step_duration">Продолжительность одного шага</string>
+    <string name="simulation_settings">Настройки симуляции</string>
+    <string name="language">Язык</string>
+    <string name="game_settings">Игровые настройки</string>
+    <string name="neighbors_for_reviving">Соседей для возрождению</string>
+    <string name="neighbors_for_surviving">Соседей для выживания</string>
+    <string name="rules">Правила</string>
+    <string name="to_default">По умолчанию</string>
+    <string name="change_theme">Изменить тему</string>
+    <string name="application">Приложение</string>
+    <string name="information">Информация</string>
+    <string name="rules_set">Набор правил</string>
+    <string name="rate_dialog_title">Вам понравилось это приложение?</string>
+    <string name="rate_dialog_description">Пожалуйста, поделитесь своим мнением о приложении, оставив отзыв. Твоя
+        оценка поможет нам улучшить приложение для всех пользователей</string>
+    <string name="dont_ask_again">Не спрашивать больше</string>
+    <string name="later">Позже</string>
+    <string name="rate">Оценить!</string>
+    <string name="custom_rules">Свои правила</string>
+    <string name="rules_set_description">Выбирайте разные наборы правил, чтобы увидеть разные игровые сценарии</string>
+    <string name="other">Другой</string>
 
-    <string name="stable">стабільний</string>
-    <string name="chaotic">хаотичний</string>
-    <string name="exploding">вибухаючий</string>
-    <string name="undefined">невизначений</string>
+    <string name="stable">стабильный</string>
+    <string name="chaotic">хаотичный</string>
+    <string name="exploding">взрывающийся</string>
+    <string name="undefined">неопределенный</string>
 
-    <string name="open_in_wikipedia">Відкрити у вікіпедії</string>
+    <string name="open_in_wikipedia">Открыть в Википедии</string>
     <string name="JohnHortonConway">Джон Хортон Конвей</string>
-    <string name="JohnHortonConway_card_description">англійський математик, зробив значні
-        внесок у скінченні групи, теорію вузлів, теорію чисел, теорію комбінаторних ігор і теорію кодування.
-        Примітно, що він відомий винаходом клітинного автомата під назвою «Гра життя» в рекреаційній математиці</string>
+    <string name="JohnHortonConway_card_description">Английский математик, внес значительный вклад в конечные автоматы, теорию комбинаций, теорию чисел, теорию игр и теорию кодирования.
+        Примечательно, что он известен изобретением клеточного автомата под названием «Игра в жизнь» в развлекательной математике.</string>
 
-    <string name="the_game_of_life">Гра життя</string>
-    <string name="GameOfLife_large_description">Гра в життя, також відома просто як «Життя», — це клітинний автомат
-        розроблено в 1970 році. Це гра без гравців, тобто її розвиток визначається початковим станом і
-        не вимагає додаткових дій. Людина взаємодіє з Гра Життя, створюючи початкову конфігурацію
-        і спостерігати, як він розвивається. Він повний Тьюринга і може моделювати універсальний конструктор або будь-який інший Тьюринг
-        машина</string>
+    <string name="the_game_of_life">Игра в Жизнь</string>
+    <string name="GameOfLife_large_description">Также известная просто как «Жизнь», представляет собой клеточный автомат.
+        разработана в 1970 году. Это игра с нулевым участием игроков, а это означает, что ее эволюция определяется ее начальным состоянием и
+        не требует дополнительных действий. Человек взаимодействует с Игрой в Жизнь, создавая первоначальную конфигурацию.
+        и наблюдаем за тем, как оно развивается. Он является полным по Тьюрингу и может моделировать универсальный конструктор или любой другой конструктор Тьюринга.</string>
 
-    <string name="open_source_project">Проект з відкритим кодом</string>
-    <string name="open_source_project_description">Ви можете знайти весь вихідний код на GitHub ⭐️</string>
+    <string name="open_source_project">Проект с открытым исходным кодом</string>
+    <string name="open_source_project_description">Вы можете найти весь исходный код на GitHub ⭐️</string>
 
-    <string name="telegram_community">Приєднуйтеся до спільноти Telegram</string>
-    <string name="telegram_community_description">Стежте за оновленнями програм, отримуйте ранні збірки та допомагайте тестувати
-        нові можливості. Пропонуйте свої ідеї, ставте запитання та отримуйте швидкі відповіді</string>
+    <string name="telegram_community">Присоединяйтесь к сообществу Telegram</string>
+    <string name="telegram_community_description">Следите за обновлениями приложений, получайте ранние сборки и помогайте в тестировании.
+        новые возможности. Предлагайте свои идеи, задавайте вопросы и получайте быстрые ответы</string>
 
     <string name="onb_1_headline">Доктор Джон Конвей</string>
-    <string name="onb_1_description">Розробив цю симуляцію еволюції клітинних автоматів у 1970 році під назвою \\"Game
-        of Life\\", де кожна клітинка на ігровому полі відповідає простим правилам</string>
+    <string name="onb_1_description">В 1970 году разработал эту симуляцию эволюции клеточных автоматов, названную «Игра в Жизнь», где каждая клетка
+        игрового поля подчиняется простым правилам</string>
     <string name="onb_2_headline">Правило 1</string>
-    <string name="onb_2_description">У порожній (мертвій) клітині, якщо живих сусідів рівно три, життя є
-        народився</string>
+    <string name="onb_2_description">В пустой (мертвой) клетке, если живых соседей ровно три, жизнь возрождается</string>
     <string name="onb_3_headline">Правило 2</string>
-    <string name="onb_3_description">Якщо жива клітина має двох або трьох живих сусідів, вона продовжує жити;
-        інакше клітина гине (через «самотність» або «перенаселеність»)</string>
+    <string name="onb_3_description">Если у живой клетки есть два или три живых соседа, она продолжает жить;
+        в противном случае клетка погибает (из-за «одиночества» или «перенаселенности»)</string>
 
 </resources>
