--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">Игра в Жизнь</string>
+    <string name="app_name">Гра в Життя</string>
 
-    <string name="GameOfLife">Игра в Жизнь</string>
-    <string name="Settings">Настройки</string>
-    <string name="Onboarding">Введение</string>
-    <string name="drawer_GameOfLife_description">Игра в Жизнь</string>
-    <string name="drawer_Settings_description">Настройки</string>
-    <string name="drawer_Onboarding_description">Введение</string>
+    <string name="GameOfLife">Гра в Життя</string>
+    <string name="Settings">Налаштування</string>
+    <string name="Onboarding">Вступ</string>
+    <string name="drawer_GameOfLife_description">Гра в Життя</string>
+    <string name="drawer_Settings_description">Налаштування</string>
+    <string name="drawer_Onboarding_description">Вступ</string>
 
     <string name="speed_value_100ms">100мс</string>
     <string name="speed_value_250ms">250мс</string>
@@ -14,75 +14,86 @@
     <string name="speed_value_750ms">750мс</string>
     <string name="speed_value_1s">1с</string>
 
-    <string name="start_game">Начать игру</string>
+    <string name="start_game">Почати гру</string>
     <string name="menu_button">Кнопка меню</string>
-    <string name="clear">Очистить</string>
-    <string name="free_soul_mode">Свободные души</string>
-    <string name="free_soul_mode_description">Указывает, следует ли удалять мертвые клетки</string>
-    <string name="emoji_mode">Режим эмодзи</string>
-    <string name="emoji_mode_description">Вместо заливки используется набор эмодзи</string>
+    <string name="clear">Очистити</string>
+    <string name="free_soul_mode">Вільні душі</string>
+    <string name="free_soul_mode_description">Вказує, чи слід видаляти мертві клітини</string>
+    <string name="emoji_mode">Режим емодзі</string>
+    <string name="emoji_mode_description">Замість заливки використовується набір емодзі</string>
     <string name="restart">Перезапуск</string>
-    <string name="stable_combination">Стабильное сочетание 🎉</string>
-    <string name="no_one_survived">Никто не выжил 💀</string>
-    <string name="alive">Живых</string>
-    <string name="deaths">Мертвых</string>
-    <string name="revivals">Возрождений</string>
-    <string name="switch_running_simulation">Переключить режим симуляцию</string>
-    <string name="set_field_dimensions">Установить размеры поля</string>
-    <string name="rows">Строки</string>
-    <string name="columns">Столбцы</string>
-    <string name="one_step_duration">Продолжительность одного шага</string>
-    <string name="simulation_settings">Настройки симуляции</string>
-    <string name="language">Язык</string>
-    <string name="game_settings">Игровые настройки</string>
-    <string name="neighbors_for_reviving">Соседей для возрождению</string>
-    <string name="neighbors_for_surviving">Соседей для выживания</string>
+    <string name="stable_combination">Стабільне поєднання 🎉</string>
+    <string name="no_one_survived">Ніхто не вижив 💀</string>
+    <string name="alive">Живих</string>
+    <string name="deaths">Мертвих</string>
+    <string name="revivals">Відроджень</string>
+    <string name="switch_running_simulation">Переключити режим симуляції</string>
+    <string name="set_field_dimensions">Встановити розмір поля</string>
+    <string name="rows">Рядки</string>
+    <string name="columns">Стовпці</string>
+    <string name="one_step_duration">Тривалість одного кроку</string>
+    <string name="simulation_settings">Налаштування симуляції</string>
+    <string name="language">Мова</string>
+    <string name="game_settings">Ігрові налаштування</string>
+    <string name="neighbors_for_reviving">Сусідів для відродження</string>
+    <string name="neighbors_for_surviving">Сусідів для виживання</string>
     <string name="rules">Правила</string>
-    <string name="to_default">По умолчанию</string>
-    <string name="change_theme">Изменить тему</string>
-    <string name="application">Приложение</string>
-    <string name="information">Информация</string>
-    <string name="rules_set">Набор правил</string>
-    <string name="rate_dialog_title">Вам понравилось это приложение?</string>
-    <string name="rate_dialog_description">Пожалуйста, поделитесь своим мнением о приложении, оставив отзыв. Твоя
-        оценка поможет нам улучшить приложение для всех пользователей</string>
-    <string name="dont_ask_again">Не спрашивать больше</string>
-    <string name="later">Позже</string>
-    <string name="rate">Оценить!</string>
-    <string name="custom_rules">Свои правила</string>
-    <string name="rules_set_description">Выбирайте разные наборы правил, чтобы увидеть разные игровые сценарии</string>
-    <string name="other">Другой</string>
+    <string name="to_default">За умовчанням</string>
+    <string name="change_theme">Змінити тему</string>
+    <string name="application">Додаток</string>
+    <string name="information">Інформація</string>
+    <string name="rules_set">Набір правил</string>
+    <string name="rate_dialog_title">Вам сподобалася ця програма?</string>
+    <string name="rate_dialog_description">Будь ласка, поділіться своєю думкою про програму, залишивши відгук. Твоя
+        оцінка допоможе нам покращити програму для всіх користувачів
+    </string>
+    <string name="dont_ask_again">Не питати більше</string>
+    <string name="later">Пізніше</string>
+    <string name="rate">Оцінити!</string>
+    <string name="custom_rules">Свої правила</string>
+    <string name="rules_set_description">Вибирайте різні набори правил, щоб побачити різні ігрові сценарії</string>
+    <string name="other">Інший</string>
 
-    <string name="stable">стабильный</string>
-    <string name="chaotic">хаотичный</string>
-    <string name="exploding">взрывающийся</string>
-    <string name="undefined">неопределенный</string>
+    <string name="stable">стабільний</string>
+    <string name="chaotic">хаотичний</string>
+    <string name="exploding">підривний</string>
+    <string name="undefined">невизначений</string>
 
-    <string name="open_in_wikipedia">Открыть в Википедии</string>
+    <string name="open_in_wikipedia">Відкрити у Вікіпедії</string>
     <string name="JohnHortonConway">Джон Хортон Конвей</string>
-    <string name="JohnHortonConway_card_description">Английский математик, внес значительный вклад в конечные автоматы, теорию комбинаций, теорию чисел, теорию игр и теорию кодирования.
-        Примечательно, что он известен изобретением клеточного автомата под названием «Игра в жизнь» в развлекательной математике.</string>
+    <string name="JohnHortonConway_card_description">Англійський математик, зробив значний внесок у кінцеві автомати,
+        теорію комбінацій, теорію чисел, теорію ігор і теорію кодування.
+        Цікаво, що він відомий винаходом клітинного автомата під назвою «Гра в життя» у розважальній математиці.
+    </string>
 
-    <string name="the_game_of_life">Игра в Жизнь</string>
-    <string name="GameOfLife_large_description">Также известная просто как «Жизнь», представляет собой клеточный автомат.
-        разработана в 1970 году. Это игра с нулевым участием игроков, а это означает, что ее эволюция определяется ее начальным состоянием и
-        не требует дополнительных действий. Человек взаимодействует с Игрой в Жизнь, создавая первоначальную конфигурацию.
-        и наблюдаем за тем, как оно развивается. Он является полным по Тьюрингу и может моделировать универсальный конструктор или любой другой конструктор Тьюринга.</string>
+    <string name="the_game_of_life">Гра в Життя</string>
+    <string name="GameOfLife_large_description">Також відома просто як «Життя», являє собою клітинний автомат.
+        розроблено у 1970 році. Це гра з нульовою участю гравців, а це означає, що її еволюція визначається її
+        початковим станом та
+        не потребує додаткових дій. Людина взаємодіє з грою в життя, створюючи початкову конфігурацію.
+        та спостерігаємо за тим, як воно розвивається. Він є повним за Тьюрингом і може моделювати універсальний
+        конструктор або будь-який інший конструктор Тьюринга.
+    </string>
 
-    <string name="open_source_project">Проект с открытым исходным кодом</string>
-    <string name="open_source_project_description">Вы можете найти весь исходный код на GitHub ⭐️</string>
+    <string name="open_source_project">Проект з відкритим вихідним кодом</string>
+    <string name="open_source_project_description">Ви можете знайти весь вихідний код на GitHub ⭐️</string>
 
-    <string name="telegram_community">Присоединяйтесь к сообществу Telegram</string>
-    <string name="telegram_community_description">Следите за обновлениями приложений, получайте ранние сборки и помогайте в тестировании.
-        новые возможности. Предлагайте свои идеи, задавайте вопросы и получайте быстрые ответы</string>
+    <string name="telegram_community">Приєднуйтесь до спільноти Telegram</string>
+    <string name="telegram_community_description">Слідкуйте за оновленнями програм, отримуйте ранні збірки та
+        допомагайте в тестуванні.
+        нові можливості. Пропонуйте свої ідеї, ставте запитання та отримуйте швидкі відповіді
+    </string>
 
     <string name="onb_1_headline">Доктор Джон Конвей</string>
-    <string name="onb_1_description">В 1970 году разработал эту симуляцию эволюции клеточных автоматов, названную «Игра в Жизнь», где каждая клетка
-        игрового поля подчиняется простым правилам</string>
+    <string name="onb_1_description">У 1970 році розробив цю симуляцію еволюції клітинних автоматів, названу «Гра в
+        Життя», де кожна клітина ігрового поля підпорядковується простим правилам
+    </string>
     <string name="onb_2_headline">Правило 1</string>
-    <string name="onb_2_description">В пустой (мертвой) клетке, если живых соседей ровно три, жизнь возрождается</string>
+    <string name="onb_2_description">У порожній (мертвій) клітині, якщо живих сусідів рівно три, життя відроджується
+    </string>
     <string name="onb_3_headline">Правило 2</string>
-    <string name="onb_3_description">Если у живой клетки есть два или три живых соседа, она продолжает жить;
-        в противном случае клетка погибает (из-за «одиночества» или «перенаселенности»)</string>
+    <string name="onb_3_description">Якщо у живої клітини є два або три живі сусіди, вона продовжує жити;
+        інакше клітина гине (через «самотність» чи «перенаселеність»)
+    </string>
 
 </resources>
