added field scale slider

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,6 @@
     <string name="revivals">Revivals</string>
     <string name="switch_running_simulation">Switch running simulation</string>
     <string name="set_field_dimensions">Set field dimensions</string>
-    <string name="set_field_scale">Set field scale</string>
     <string name="rows">Rows</string>
     <string name="columns">Columns</string>
     <string name="one_step_duration">One step duration</string>
@@ -95,5 +94,6 @@
     <string name="onb_3_description">If a living cell has two or three living neighbors, it continues to live;
         otherwise, the cell dies (due to "loneliness" or "overcrowding")
     </string>
+    <string name="set_field_scale">Field scale</string>
 
 </resources>
