game screen updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,5 +95,7 @@
         otherwise, the cell dies (due to "loneliness" or "overcrowding")
     </string>
     <string name="set_field_scale">Field scale</string>
+    <string name="pause">Pause</string>
+
 
 </resources>
