updated information ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,6 @@
     </string>
     <string name="set_field_scale">Field scale</string>
     <string name="pause">Pause</string>
-
+    <string name="close">Close</string>
 
 </resources>
