--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,5 +109,7 @@
     <string name="update_available">Update available</string>
     <string name="download">Download</string>
     <string name="installed_latest_version">Installed latest version</string>
+    <string name="detect_loops">Detect loops</string>
+    <string name="pauses_game_when_loop">Pauses the game when a loop is detected</string>
 
 </resources>
