--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,5 +111,6 @@
     <string name="installed_latest_version">Installed latest version</string>
     <string name="detect_loops">Detect loops</string>
     <string name="pauses_game_when_loop">Pauses the game when a loop is detected</string>
+    <string name="number_of_skipped_steps">Number of skipped steps</string>
 
 </resources>
